--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -1,1 +1,13 @@
 server.port=8082
+
+
+#Configurations H2
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+#défini l'encodage pour data.sql
+spring.datasource.sql-script-encoding=UTF-8
+
+#Nos configurations
+
+mes-configs.limitDeProduits= 4
