--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -1,13 +1,13 @@
-server.port=8082
 
-
-#Configurations H2
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-
-#défini l'encodage pour data.sql
-spring.datasource.sql-script-encoding=UTF-8
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #Nos configurations
 
-mes-configs.limitDeProduits= 4
+# mes-configs.limitDeProduits= 4
