--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -9,5 +9,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #Nos configurations
-
-# mes-configs.limitDeProduits= 4
+mes-configs.limitDeProduits= 4
