--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -1,6 +1,6 @@
 
-server.port=1213
-#spring.datasource.url=jdbc:mysql://localhost:3306/product_db?serverTimezone=UTC
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
